# nutricao-web-app

./: .gitignore  LICENSE  README.md
nutricao-app/: pyproject.toml
nutricao-app/nutricao_app/: app.py  models.py
